--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script>
       function myFunction() {
-        var copyText = `Djavascript: (function () {
+        var copyText = `: (function () {
   const possible_ids = ["home-icon", "logo-icon"];
 
   possible_ids.forEach((id) => {
