--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script>
       function myFunction() {
-        var copyText = `javascript: (function () {
+        var copyText = `avascript: (function () {
                         const possible_ids = ["home-icon", "logo-icon"];
 
                         possible_ids.forEach((id) => {
@@ -22,7 +22,7 @@
                             document.getElementById(id).innerHTML = HTML_youtube_icon;
                           } catch (error) {}
                         });
-                        
+
                         const clear = (() => {
                           const defined = (v) => v !== null && v !== undefined;
                           const timeout = setInterval(() => {
