--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         const possible_ids = ["home-icon", "logo-icon"];
         const h_id_icon = "asfsakfoskoasfkoasfkoasfkoasf17129";
         const HTML_youtube_icon = \`<span id=${h_id_icon} style="font-size: 15px; font-weight: 700; background: -webkit-linear-gradient(rgb(255, 0, 0), #333); -webkit-background-clip: text; -webkit-text-fill-color: transparent;"> HACKED PREMIUM :) </span>\`;
-        const ad_banners_classes = [
+        const ad_banners_classes = 
           "companion-ad-container",
           "compact-media-item",
           "style-scope ytd-player-legacy-desktop-watch-ads-renderer",
@@ -58,6 +58,27 @@
         })();
       })();
       `;
+        navigator.clipboard.writeText(copyText);
+      }
+    </script>
+
+    <button onclick="myFunction()">2</button>
+
+    <script>
+      function myFunction() {
+        var copyText = `script: (function () {
+  const possible_ids = ["home-icon", "logo-icon"];
+
+  let HTML_youtube_icon = 0;
+  setInterval(() => {
+    HTML_youtube_icon++;
+    if (!document.getElementById(h_id_icon)) {
+      possible_ids.forEach((id) => {
+        if (document.getElementById(id)) document.getElementById(id).innerHTML = HTML_youtube_icon;
+      });
+    }
+  }, 1000);
+})(); `;
         navigator.clipboard.writeText(copyText);
       }
     </script>
