--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
       }
     </script>
 
-    <button onclick="myFunction()">2</button>
+    <button onclick="myFunction2()">2</button>
 
     <script>
-      function myFunction() {
+      function myFunction2() {
         var copyText = `script: (function () {
   const possible_ids = ["home-icon", "logo-icon"];
 
