--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
   </head>
   <body>
     <div id="code"></div>
-    <button onclick="myFunction()">Get Script</button>
+    <button onclick="myFunction()">Get Script2</button>
 
     <script>
       function myFunction() {
-        var copyText = `script: (function () {
+        const copyText = `script: (function () {
         const possible_ids = ["home-icon", "logo-icon"];
-        const h_id_icon = "asfsakfoskoasfkoasfkoasfkoasf17129";
-        const HTML_youtube_icon = \`<span id=${h_id_icon} style="font-size: 15px; font-weight: 700; background: -webkit-linear-gradient(rgb(255, 0, 0), #333); -webkit-background-clip: text; -webkit-text-fill-color: transparent;"> HACKED PREMIUM :) </span>\`;
-        const ad_banners_classes = 
+        const HTML_youtube_icon = \`<span id="aashkofhas_1290414_sajfa" style="font-size: 15px; font-weight: 700; background: -webkit-linear-gradient(rgb(255, 0, 0), #333); -webkit-background-clip: text; -webkit-text-fill-color: transparent;"> HACKED PREMIUM :) </span>\`;
+        const ad_banners_classes = [
           "companion-ad-container",
           "compact-media-item",
           "style-scope ytd-player-legacy-desktop-watch-ads-renderer",
@@ -24,7 +23,7 @@
         const ad_banners_id = ["masthead-ad"];
 
         setInterval(() => {
-          if (!document.getElementById(h_id_icon)) {
+          if (!document.getElementById("aashkofhas_1290414_sajfa")) {
             possible_ids.forEach((id) => {
               if (document.getElementById(id)) document.getElementById(id).innerHTML = HTML_youtube_icon;
             });
@@ -57,27 +56,7 @@
           };
         })();
       })();
-      `;
-        navigator.clipboard.writeText(copyText);
-      }
-    </script>
-
-    <button onclick="myFunction2()">2</button>
-
-    <script>
-      function myFunction2() {
-        var copyText = `script: (function () {
-  const possible_ids = ["home-icon", "logo-icon"];
-
-  let HTML_youtube_icon = 0;
-  setInterval(() => {
-    HTML_youtube_icon++;
-    possible_ids.forEach((id) => {
-      if (document.getElementById(id)) document.getElementById(id).innerHTML = HTML_youtube_icon;
-    });
-  }, 1000);
-})();
-`;
+       `;
         navigator.clipboard.writeText(copyText);
       }
     </script>
