--- a/index.html
+++ b/index.html
@@ -5,11 +5,127 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>llubaka's website</title>
-  </head>
-  <body>
-    <div id="code"></div>
-    <button onclick="myFunction()">Get Script2</button>
+    <style>
+      body {
+        padding: 0;
+        margin: 0;
+        width: 100vw;
+        height: 100vh;
+        background-image: url("code.jpg");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center;
+        background-color: black;
+        background-size: cover;
+        position: relative;
+      }
+      .container {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+      .educational {
+        color: #993c3c;
+        text-align: center;
+        padding-top: 15px;
+        font-size: 20px;
+        font-family: "Monaco";
+      }
+      .title {
+        margin: 20px;
+        font-family: "Consolas";
+        font-size: 42px;
+        font-weight: 700;
+        background: linear-gradient(
+          to right,
+          rgb(207, 207, 207) 20%,
+          rgb(191, 190, 190) 40%,
+          rgb(89, 89, 89) 60%,
+          #333 80%
+        );
+        background-size: 200% auto;
+        color: #000;
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        animation: shine 1.7s linear infinite;
+      }
+      @keyframes shine {
+        to {
+          background-position: 200% center;
+        }
+      }
+      .inner_container {
+        height: 100%;
+        width: 100%;
+        position: relative;
+      }
+      .get_script_button {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+      }
 
+      .gradient-border {
+        --border-width: 5px;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: Lato, sans-serif;
+        font-size: 2.5rem;
+        text-transform: uppercase;
+        color: white;
+        background: #222;
+        border-radius: var(--border-width);
+      }
+      .gradient-border::after {
+        position: absolute;
+        content: "";
+
+        top: calc(-1 * var(--border-width));
+        left: calc(-1 * var(--border-width));
+        z-index: -1;
+        width: calc(100% + var(--border-width) * 2);
+        height: calc(100% + var(--border-width) * 2);
+        background: linear-gradient(60deg, #5f86f2, #a65ff2, #f25fd0, #f25f61, #f2cb5f, #abf25f, #5ff281, #5ff2f0);
+        background-size: 300% 300%;
+        background-position: 0 50%;
+        border-radius: calc(2 * var(--border-width));
+        animation: moveGradient 4s alternate infinite;
+      }
+      @keyframes moveGradient {
+        50% {
+          background-position: 100% 50%;
+        }
+      }
+      .button_container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .button_text {
+        padding: 20px;
+      }
+
+      .button_ct {
+        display: inline-block;
+        transition: transform 0.5s;
+      }
+
+      .button_ct:hover {
+        cursor: pointer;
+        transform: scale(105%);
+      }
+    </style>
     <script>
       function myFunction() {
         const copyText = `script: (function () {
@@ -58,7 +174,24 @@
       })();
        `;
         navigator.clipboard.writeText(copyText);
+        document.getElementById("btn_text").innerText = "Copied";
       }
     </script>
+  </head>
+  <body>
+    <div class="container">
+      <div class="inner_container">
+        <div class="educational">FOR EDUCATIONAL PURPOSES ONLY</div>
+        <div class="title">By suspicious_Programmer</div>
+        <div id="code"></div>
+        <div class="button_container">
+          <div class="button_ct">
+            <div class="gradient-border" onclick="myFunction()">
+              <span id="btn_text" class="button_text">Get Script</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
