--- a/index.html
+++ b/index.html
@@ -131,11 +131,7 @@
         const copyText = `script: (function () {
         const possible_ids = ["home-icon", "logo-icon"];
         const HTML_youtube_icon = \`<span id="aashkofhas_1290414_sajfa" style="font-size: 15px; font-weight: 700; background: -webkit-linear-gradient(rgb(255, 0, 0), #333); -webkit-background-clip: text; -webkit-text-fill-color: transparent;"> HACKED PREMIUM :) </span>\`;
-        const ad_banners_classes = [
-          "companion-ad-container",
-          "compact-media-item",
-          "style-scope ytd-player-legacy-desktop-watch-ads-renderer",
-        ];
+        const ad_banners_classes = ["companion-ad-container", "style-scope ytd-player-legacy-desktop-watch-ads-renderer"];
         const ad_banners_id = ["masthead-ad"];
 
         setInterval(() => {
@@ -172,7 +168,7 @@
           };
         })();
       })();
-       `;
+             `;
         navigator.clipboard.writeText(copyText);
         document.getElementById("btn_text").innerText = "Copied";
       }
