--- a/index.html
+++ b/index.html
@@ -28,38 +28,18 @@
       }
       .educational {
         text-align: center;
-        padding-top: 15px;
+        padding: 15px 0;
         font-size: 32px;
         font-family: "Monaco";
         animation: text_animation 2.7s linear infinite;
-      }
-      .title {
-        margin: 20px;
-        font-family: "Consolas";
-        font-size: 42px;
-        font-weight: 700;
-        background: linear-gradient(
-          to right,
-          rgb(207, 207, 207) 20%,
-          rgb(191, 190, 190) 40%,
-          rgb(89, 89, 89) 60%,
-          #333 80%
-        );
-        background-size: 200% auto;
-        color: #000;
-        background-clip: text;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        animation: shine 1.7s linear infinite;
-      }
-      @keyframes shine {
-        to {
-          background-position: 200% center;
-        }
+        background-color: rgb(0 0 0 / 70%);
       }
 
       @keyframes text_animation {
         0% {
+          color: rgb(231, 4, 4);
+        }
+        10% {
           color: rgb(255, 0, 0);
         }
         20% {
@@ -147,6 +127,29 @@
         cursor: pointer;
         transform: scale(105%);
       }
+
+      .footer {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.8);
+      }
+
+      .footer_text {
+        padding: 10px;
+        font-size: 20px;
+        font-family: "Monaco";
+        font-weight: 500;
+        color: #e5e5e5;
+      }
+
+      .footer_text_legal {
+        padding: 10px;
+        padding-top: 0px;
+        font-size: 12px;
+        color: #b1afaf;
+      }
     </style>
     <script>
       function myFunction() {
@@ -200,13 +203,19 @@
     <div class="container">
       <div class="inner_container">
         <div class="educational">FOR EDUCATIONAL PURPOSES ONLY</div>
-        <div class="title">By suspicious_Programmer</div>
         <div id="code"></div>
         <div class="button_container">
           <div class="button_ct">
             <div class="gradient-border" onclick="myFunction()">
               <span id="btn_text" class="button_text">Get Script</span>
             </div>
+          </div>
+        </div>
+        <div class="footer">
+          <div class="footer_text">Created by llubaka</div>
+          <div class="footer_text_legal">
+            The script is created for educational purposes only. The script creator is not responsible for how it is
+            used.
           </div>
         </div>
       </div>
