--- a/index.html
+++ b/index.html
@@ -31,32 +31,8 @@
         padding: 15px 0;
         font-size: 32px;
         font-family: "Monaco";
-        animation: text_animation 2.7s linear infinite;
+        color: #30d60e;
         background-color: rgb(0 0 0 / 70%);
-      }
-
-      @keyframes text_animation {
-        0% {
-          color: rgb(231, 4, 4);
-        }
-        10% {
-          color: rgb(255, 0, 0);
-        }
-        20% {
-          color: rgb(195, 2, 2);
-        }
-        40% {
-          color: rgb(152, 3, 3);
-        }
-        60% {
-          color: rgb(106, 2, 2);
-        }
-        80% {
-          color: rgb(166, 3, 3);
-        }
-        100% {
-          color: rgb(221, 6, 6);
-        }
       }
 
       .inner_container {
