--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="" />
     <link rel="apple-touch-icon" href="/favicon.ico" />
@@ -22,8 +21,7 @@
         background-color: black;
         background-size: cover;
         position: relative;
-
-        height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+        height: 100vh;
       }
 
       @media (max-width: 720px) {
