--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
       }
     </style>
     <script>
-            function myFunction() {
-              const copyText = `javascript: (function () {
+      function myFunction() {
+        const copyText = `javascript: (function () {
         const possible_ids = ["home-icon", "logo-icon"];
-        const HTML_youtube_icon = `<span id="aashkofhas_1290414_sajfa" style="font-size: 15px; font-weight: 700; background: -webkit-linear-gradient(rgb(255, 0, 0), #333); -webkit-background-clip: text; -webkit-text-fill-color: transparent;"> HACKED PREMIUM :) </span>`;
+        const HTML_youtube_icon = \`<span id="aashkofhas_1290414_sajfa" style="font-size: 15px; font-weight: 700; background: -webkit-linear-gradient(rgb(255, 0, 0), #333); -webkit-background-clip: text; -webkit-text-fill-color: transparent;"> HACKED PREMIUM :) </span>\`;
         const ad_banners_classes = ["companion-ad-container", "style-scope ytd-player-legacy-desktop-watch-ads-renderer"];
         const ad_banners_id = ["masthead-ad"];
         const start_video_classname = "icon-button player-control-play-pause-icon";
@@ -192,9 +192,9 @@
         })();
       })();
       `;
-              navigator.clipboard.writeText(copyText);
-              document.getElementById("btn_text").innerText = "Copied";
-            }
+        navigator.clipboard.writeText(copyText);
+        document.getElementById("btn_text").innerText = "Copied";
+      }
     </script>
     <script>
       let vh = window.innerHeight * 0.01;
